# generate-your-presentation-with-llm

./: README.md  pptx-generator.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
src/: prompt.py  template_mapping.py  utils.py
templates/: pptx_base_template.pptx
